# netbox-graphs

./: README.md  pyproject.toml  tasks.py
development/: Dockerfile  base_configuration.py  docker-compose.yml
netbox_graphs/: __init__.py  admin.py  models.py  template_content.py
netbox_graphs/api/: urls.py  views.py
netbox_graphs/migrations/: 0001_initial.py  0002_auto_20201030_0805.py
netbox_graphs/templates/netbox_graphs/: button.html
