[tool.poetry]
name = "netbox-graphs"
version = "0.0.1"
description = "Netbox Graphs Plugin."
authors = ["Alex Gittings, <alexgit@hotmail.co.uk>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/minitriga/netbox-graphs"
repository = "https://github.com/minitriga/netbox-graphs"
keywords = ["netbox", "network", "graphs", "django"]
include = [
    "LICENSE",
    "README.md",
    "docs/images/*",
]
packages = [
    { include = "netbox_graphs" },
]

[tool.poetry.dependencies]
python = "^3.6 || ^3.7 || ^3.8"
invoke = "^1.4.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
yamllint = "^1.23.0"
bandit = "^1.6.2"
pylint = "^2.5.2"
pylint-django = "^2.0.15"
pydocstyle = "^5.0.2"

[tool.black]
line-length = 120
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"